force-app/main/default/objects/CQ_KR_SQX_Coach__c/CQ_KR_SQX_Coach__c.object-meta.xml
<CustomObject>
    <label>Coach</label>
    <nameField>
        <label>Coach Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>