force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Child__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Child__c</fullName>
    <label>Child?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>