force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Description__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>