force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Resume__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Resume__c</fullName>
    <label>Resume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>