force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_SQX_Account__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_SQX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <filterItems>
            <field>Account.compliancequest__Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coaches</relationshipLabel>
    <relationshipName>Coaches</relationshipName>
    <type>Lookup</type>
</CustomField>