force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_SQX_Part_Family__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_SQX_Part_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Family</label>
    <referenceTo>compliancequest__SQX_Part_Family__c</referenceTo>
    <relationshipLabel>Coaches</relationshipLabel>
    <relationshipName>Coaches</relationshipName>
    <type>Lookup</type>
</CustomField>