force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_SQX_User__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_SQX_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coaches</relationshipName>
    <type>Lookup</type>
</CustomField>