force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Team__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>West Indies</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Netherland</fullName>
            </value>
            <value>
                <fullName>Iceland</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Zimbabwe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>