force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Training_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Training_Completion_Date__c</fullName>
    <label>Training Completion Date</label>
    <type>Date</type>
</CustomField>