force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Training_Status__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>