force-app/main/default/objects/CQ_KR_SQX_Coach__c/fields/CQ_KR_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>CQ_KR_Working_Days__c</fullName>
    <label>Working Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>