force-app/main/default/objects/CQ_KR_SQX_Coach__c/validationRules/CQ_KR_StartDate_LT_CompletionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_KR_StartDate_LT_CompletionDate</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_KR_Training_Start_Date__c  &gt;  CQ_KR_Training_Completion_Date__c</errorConditionFormula>
    <errorMessage>Start Should be less than completion date.</errorMessage>
</ValidationRule>