force-app/main/default/objects/CQ_KR_SQX_Coach__c/validationRules/StartDateMustBeLesserThanCompletionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateMustBeLesserThanCompletionDate</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_KR_Training_Start_Date__c  &gt;  CQ_KR_Training_Completion_Date__c</errorConditionFormula>
    <errorMessage>Should be less than completion date</errorMessage>
</ValidationRule>