force-app/main/default/objects/CQ_KR_SQX_Coach__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CQ_KR_Training_Status__c</columns>
    <columns>CQ_KR_Training_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>